[workspace]
members = [
    "business-core-db",
    "business-core-postgres",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Business Team <business@company.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/company/business-core"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.32", features = ["serde", "db-postgres", "db-diesel-postgres", "maths"] }
thiserror = "1.0"
anyhow = "1.0"
ciborium = "0.2"

# Async traits
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal", "derive", "macros"], default-features = false }

# Caching
moka = { version = "0.12", features = ["future"] }

# Testing
tokio-test = "0.4"

# Logging and tracing
tracing = "0.1"
log = "0.4"

# Random number generation
rand = "0.8"
heapless = { version = "0.8", features = ["serde"] }