[package]
name = "business-core-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
business-core-api = { path = "../business-core-api" }
business-core-db = { path = "../business-core-db" }
postgres-unit-of-work = { git = "https://github.com/ADORSYS-GIS/postgres-unit-of-work", branch = "master" }
postgres-index-cache = { git = "https://github.com/ADORSYS-GIS/postgres-index-cache", branch = "master", features = ["sqlx-listener"] }
parking_lot = "0.12"

# Database
sqlx = { workspace = true, features = ["rust_decimal"] }
tokio.workspace = true

# Serialization
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true

# Error handling
thiserror.workspace = true

# Async traits
async-trait.workspace = true

# Stack optimization
heapless.workspace = true
twox-hash = "2.1.1"

# Logging
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
sqlx = { workspace = true, features = ["migrate"] }

[features]
test-utils = ["sqlx/migrate"]

[package.metadata.sqlx]
migrations = "./migrations"